# todo-fastapi

./: .env  .gitignore  Makefile  pyproject.toml  version.py
docker/: docker-compose.yml
docker/sql/: init.sql
src/: app.py  main.py
src/api/v1/: router.py
src/api/v1/routes/: status.py  tasks.py
src/config/: app_config.py  config.py
src/core/: config.py  exceptions.py  logger.py  security.py
src/core/models/: users.py
src/core/schemas/: Status.py
src/core/settings/: app.py  base.py
src/db/: base_class.py  session.py  tasks.py
src/db/entities/: user.py
src/db/repositories/: tasks.py
src/db/repository/: base.py  users.py
src/domain/: response.py  task.py  tasks.py
src/hadlers/: exceptions.py
src/loggin/: loggin.py
src/models/: response.py
src/schemas/: tasks.py
src/services/: user.py
src/utils/: tasks.py
